# domainforge

./: .pdm-python  pyproject.toml
docs/: lark_workflow.txt
src/core/: parser.py  transformer.py
src/grammer/: domainforge_grammar.lark
